tests/output/self_hosted/double_minus_prefix_error.txt
tests/double_minus_prefix_error.oomph:4: error: '--' is not supported

    print(--thing)     # This errors
          ^^

